Fixed body margin, improved button legibility

--- a/style.css
+++ b/style.css
@@ -14,12 +14,13 @@
 }
 
 body{
+    margin: 0;
     min-height: 100vh;
     background-color: var(--salmon);
     display: grid;
     place-items: center;
     background: rgb(255,180,162);
-background: linear-gradient(0deg, rgba(255,180,162,1) 13%, rgba(235,94,40,1) 87%);
+    background: linear-gradient(0deg, rgba(255,180,162,1) 13%, rgba(235,94,40,1) 87%);
 }
 
 
@@ -46,6 +47,8 @@ background: linear-gradient(0deg, rgba(255,180,162,1) 13%, rgba(235,94,40,1) 87%
 }
 
 .btn{
+    font-weight: 800;
+    font-size: large;
     padding: 1.5rem;
     border: 0;
     border-radius: 30px;
@@ -54,6 +57,7 @@ background: linear-gradient(0deg, rgba(255,180,162,1) 13%, rgba(235,94,40,1) 87%
     color: var(--black);
     font-weight: 500;
     cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 9px 38px, rgba(0, 0, 0, 0.22) 0px 4px 4px;
 }
 
 .btn:hover{
